--- a/FXCalendarZakrzewski/bin/application/fxevent_edit.fxml
+++ b/FXCalendarZakrzewski/bin/application/fxevent_edit.fxml
@@ -26,7 +26,7 @@
    </columnConstraints>
    <children>
       <Label text="date" />
-      <DatePicker fx:id="datePicker" disable="true" GridPane.columnIndex="1" />
+      <DatePicker fx:id="datePicker" disable="true" GridPane.columnIndex="1" GridPane.columnSpan="2" />
       <Label text="start time" GridPane.rowIndex="1" />
       <Label text="Name" GridPane.rowIndex="3" />
       <Label text="Description" GridPane.rowIndex="4" />
