--- a/calendar/WpfApp2/WpfApp2/View/SetPreferencesWindow.xaml
+++ b/calendar/WpfApp2/WpfApp2/View/SetPreferencesWindow.xaml
@@ -6,14 +6,14 @@
         xmlns:local="clr-namespace:WpfApp2.View"
         xmlns:vm="clr-namespace:WpfApp2.ViewModel"
         mc:Ignorable="d"
-        Title="SetPreferencesWindow" Height="300" Width="300">
+        Title="SetPreferencesWindow" Height="200" Width="300" ResizeMode="NoResize">
     <Window.DataContext>
         <vm:SetPreferencesWindowViewModel x:Name="setPreferencesWindowViewModel"/>
     </Window.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
@@ -21,23 +21,17 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <Label Grid.Row="0" Grid.Column="0" Content="Select main color"></Label>
+        <Label Grid.Row="0" Grid.Column="0" Content="Select main color" Margin="20"></Label>
 
-        <Label Grid.Row="1" Grid.Column="0" Content="Select font">
-            <Label.Resources>
-                <Style TargetType="TextBlock">
-                    <Setter Property="TextWrapping" Value="Wrap" />
-                </Style>
-            </Label.Resources>
-        </Label>
+        <Label Grid.Row="1" Grid.Column="0" Content="Select font"  Margin="20"></Label>
 
-        <ComboBox Grid.Column="1" Grid.Row="0" Margin="40" SelectedItem="{Binding Color, Mode=TwoWay}">
-            <ComboBoxItem>Blue</ComboBoxItem>
-            <ComboBoxItem IsSelected="True">Green</ComboBoxItem>
-            <ComboBoxItem>Magenta</ComboBoxItem>
+        <ComboBox Grid.Column="1" Grid.Row="0" Margin="10" SelectedItem="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectionChanged="ComboBox_SelectionChanged" IsSynchronizedWithCurrentItem="True">
+            <ComboBoxItem HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="Blue">Blue</ComboBoxItem>
+            <ComboBoxItem HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="Green">Green</ComboBoxItem>
+            <ComboBoxItem HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="Magenta">Magenta</ComboBoxItem>
         </ComboBox>
 
-        <ComboBox Grid.Column="1" Grid.Row="2" Margin="40" SelectedItem="{Binding Font, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectionChanged="ComboBox_SelectionChanged" IsSynchronizedWithCurrentItem="True">
+        <ComboBox SelectedValuePath="Content" Grid.Column="1" Grid.Row="2" Margin="10" SelectedItem="{Binding Font, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectionChanged="ComboBox_SelectionChanged" IsSynchronizedWithCurrentItem="True">
             <ComboBoxItem FontFamily="Times New Roman">Times new roman</ComboBoxItem>
             <ComboBoxItem FontFamily="Arial">Arial</ComboBoxItem>
             <ComboBoxItem FontFamily="Serif">Serif</ComboBoxItem>
