Zmiany na laborkach

--- a/asp.net-mvc/calendar-backend/Views/Home/modal.cshtml
+++ b/asp.net-mvc/calendar-backend/Views/Home/modal.cshtml
@@ -34,8 +34,12 @@
                                 </span>
                             </div>
                         </div>
+                        <div class="form-group">
+                            <input type="hidden" value="" id="timestamp" />
+                        </div>
                     </div>
                     <br />
+
                     <div class="error"></div>
                     <br />
                 </div>
